// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core decryptYAML with no-encrypt comments 1`] = `
Array [
  "public_key: value #no-encrypt
secret: value2
data2:
  - name: name # no-encrypt
    password: mypassword
data:
  - data1
  - data2 # no-encrypt
",
  "ddezOk3Wwy95zJU0L9FSiQ==",
]
`;

exports[`core encryptYAML with merge keys 1`] = `
"source:
  &base
  a: \\"N9176c4qD6CSk7dH7vKbeA==--SlFF0O9iHgKpcds+/6nbEg==\\" # my comment 1
  b: \\"oiWdPL0jXuboSpQGuWlU0A==--SlFF0O9iHgKpcds+/6nbEg==\\"
  c:
    - ca: kIyJwEj3fkkmyBj6hZtYjw==--SlFF0O9iHgKpcds+/6nbEg==
    - cb: hijXas73wleqP2WbWNxCqQ==--SlFF0O9iHgKpcds+/6nbEg==
target:
  <<: *base
  d: \\"YojRsQ4e3F3kZNR+xnEdRg==--SlFF0O9iHgKpcds+/6nbEg==\\"
  e: null
"
`;

exports[`core encryptYAML with no-encrypt comments 1`] = `
"public_key: value #no-encrypt
secret: +RgLaYEjBsbSUUoKF4VvZw==--SlFF0O9iHgKpcds+/6nbEg==
data2:
  - name: name # no-encrypt
    password: GIG7wZjDyba1JyAPXXF7wQ==--SlFF0O9iHgKpcds+/6nbEg==
data:
  - VonL8yLBBaeqVNe1xDZa4w==--SlFF0O9iHgKpcds+/6nbEg==
  - data2 # no-encrypt
"
`;
